@@ -1,9 +1,10 @@
 AM_CFLAGS = \
-  $(warnFLAGS) \
+  ${warnFLAGS} \
   -I.. -I../.. \
   -I${top_srcdir}/qof/ \
   -DLOCALE_DIR=\""$(datadir)/locale"\" \
-  ${GLIB_CFLAGS}  \
+  ${GLIB_CFLAGS} \
+  ${GOBJECT_CFLAGS} \
   ${LIBGDA_CFLAGS}
 
 pkglib_LTLIBRARIES=libqof-backend-gda.la
@@ -15,11 +16,10 @@ libqof_backend_gda_la_LDFLAGS = \
  -L${top_srcdir}/qof \
  -avoid-version -module
 
-#-version-info $(LIBQOF_BACKEND_QGDA_VERSION)
-
 libqof_backend_gda_la_LIBADD = \
  ${QOF_LIBS} \
  ${GLIB_LIBS} \
+ ${GOBJECT_LIBS} \
  ${LIBGDA_LIBS}
 
 EXTRA_DIST = \
