@@ -1,23 +1,0 @@
-libqof-backend-qsf.so.0 libqof1 #MINVER#
- is_our_qsf_object@Base 0.7.3
- is_our_qsf_object_be@Base 0.7.3
- is_qsf_map@Base 0.7.3
- is_qsf_map_be@Base 0.7.3
- is_qsf_object@Base 0.7.3
- is_qsf_object_be@Base 0.7.3
- is_qsf_object_with_map@Base 0.7.3
- is_qsf_object_with_map_be@Base 0.7.3
- qsf_book_node_handler@Base 0.7.3
- qsf_check_tag@Base 0.7.3
- qsf_compare_tag_strings@Base 0.7.3
- qsf_is_element@Base 0.7.3
- qsf_is_valid@Base 0.7.3
- qsf_map_prepare_list@Base 0.7.3
- qsf_node_foreach@Base 0.7.3
- qsf_object_convert@Base 0.7.3
- qsf_object_node_handler@Base 0.7.3
- qsf_object_validation_handler@Base 0.7.3
- qsf_provider_init@Base 0.7.3
- qsf_strings_equal@Base 0.7.3
- qsf_valid_foreach@Base 0.7.3
- string_to_kvp_value@Base 0.7.3
