@@ -8,8 +8,9 @@ qof (0.8.0-1) unstable; urgency=low
   * Drop .la files from plugin packages
   * Make -dev package depend on libgda3-dev and drop outdated Replaces:
     flags
+  * Add the GDA backend package by default
 
- -- Neil Williams <codehelp@debian.org>  Sun, 16 Mar 2008 12:34:28 +0000
+ -- Neil Williams <codehelp@debian.org>  Tue, 18 Mar 2008 11:09:39 +0000
 
 qof (0.7.5-1) unstable; urgency=low
 
